# rcll-refbox

./: .LICENSE  .cmakelint.py  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  Dockerfile  Makefile  README.md  devcontainer.Dockerfile
src/libs/: CMakeLists.txt  Makefile
src/libs/clips_rest_api/: Makefile  api.yaml  clips-rest-api.cpp  clips-rest-api.h
src/libs/clips_rest_api/model/: Environment.cpp  Environment.h  Fact.cpp  Fact.h  GameState.cpp  GameState.h  Machine.cpp  Machine.h  Order.cpp  Order.h  Points.cpp  Points.h  RingSpec.cpp  RingSpec.h  Robot.cpp  Robot.h  SlotValue.cpp  SlotValue.h
src/libs/config/: CMakeLists.txt  Makefile  config.cpp  config.h  config.tolua  yaml.cpp  yaml.h  yaml_node.h
src/libs/core/: CMakeLists.txt  Makefile  assert_exception.h  exception.cpp  exception.h  macros.h  plugin.cpp  plugin.h  version.h
src/libs/core/exceptions/: software.cpp  system.cpp
src/libs/core/qa/: CMakeLists.txt  qa_barrier.cpp  qa_exception.cpp  qa_mutex_count.cpp  qa_mutex_sync.cpp  qa_rwlock.cpp  qa_waitcond.cpp  qa_waitcond_serialize.cpp
src/libs/core/threading/: barrier.cpp  interruptible_barrier.cpp  mutex.cpp  mutex_locker.cpp  mutex_locker.h  read_write_lock.cpp  recursive_mutex.cpp  refc_rwlock.cpp  scoped_rwlock.cpp  scoped_rwlock.h  spinlock.cpp  thread.cpp  thread.h  thread_collector.cpp  thread_finalizer.cpp  (+6 more)
src/libs/llsf_sps/: IMPSBand.h  IMPSDeliver.h  IMPSIncomingStation.h  IMPSPickPlace1.h  IMPSPickPlace2.h  MPS.h  MPSBand.h  MPSDeliver.h  MPSIncomingStation.h  MPSInfo.h  MPSList.h  MPSPickPlace1.h  MPSPickPlace2.h  Makefile  arduino_comm.cpp  arduino_comm.h  factory.cpp  factory.h  llsf_mps_tester.cpp  machine_comm.cpp  machine_comm.h  mps.cpp  mps.h  mps_band.cpp  mps_band.h  mps_deliver.cpp  mps_deliver.h  mps_deliver_message.cpp  mps_deliver_message.h  mps_incoming_station.cpp  mps_incoming_station.h  mps_incoming_station_message.cpp  mps_incoming_station_message.h  mps_info.cpp  mps_info.h  mps_list.cpp  mps_list.h  mps_message.cpp  mps_message.h  mps_pick_place_1.cpp  (+13 more)
src/libs/logging/: CMakeLists.txt  Makefile  cache.cpp  cache.h  console.cpp  console.h  file.cpp  file.h  logger.cpp  logger.h  logger_employer.h  multi.cpp  multi.h  network.cpp  network.h  websocket.cpp  websocket.h
src/libs/mongodb_log/: CMakeLists.txt  Makefile  mongodb.mk  mongodb_log_logger.cpp  mongodb_log_logger.h  mongodb_log_protobuf.cpp  mongodb_log_protobuf.h
src/libs/mps_comm/: CMakeLists.txt  DeliveryStation.cpp  DeliveryStation.h  Makefile  RingStation.h  base_station.cpp  base_station.h  cap_station.cpp  cap_station.h  delivery_station.cpp  delivery_station.h  exceptions.h  freeopcua.mk  llsf_sps.mk  machine.cpp  machine.h  machine_factory.cpp  machine_factory.h  mps_comm.mk  mps_io_mapping.h  mps_refbox_interface.cpp  mps_refbox_interface.h  msgs  opc_utils.cpp  opc_utils.h  ring_station.cpp  ring_station.h  spdlog.mk  stations.h  storage_station.cpp  storage_station.h  subscription_client.h  timeUtils.cpp  time_utils.cpp  time_utils.h
src/libs/mps_placing_clips/: CMakeLists.txt  Makefile  mps_placing.h  mps_placing_clips.cpp  mps_placing_clips.h
src/libs/netcomm/: CMakeLists.txt  Makefile  netcomm.mk
src/libs/protobuf_clips/: CMakeLists.txt  Makefile  communicator.cpp  communicator.h
src/libs/protobuf_comm/: Makefile  client.cpp  client.h  crypto.cpp  crypto.h  frame_header.h  message_register.cpp  message_register.h  peer.cpp  peer.h  queue_entry.h  server.cpp  server.h
src/libs/protobuf_rebroadcaster/: CMakeLists.txt  rebroadcaster.cpp  rebroadcaster.h
src/libs/rest-api/: CMakeLists.txt  Makefile  rest_processor.cpp  rest_processor.h  service_browse_handler.cpp  service_browse_handler.h  webview_server.cpp  webview_server.h
src/libs/rest_api/: Makefile  rest_processor.cpp  rest_processor.h  service_browse_handler.cpp  service_browse_handler.h  webview_server.cpp  webview_server.h
src/libs/utils/: CMakeLists.txt  Makefile
src/libs/websocket/: CMakeLists.txt  Makefile  backend.cpp  backend.h  client.cpp  client.h  data.cpp  data.h  server.cpp  server.h  websocket.mk
src/libs/webview/: CMakeLists.txt  Makefile  request.cpp  request_dispatcher.cpp  request_dispatcher.h  rest_api.cpp  rest_api.h  rest_array.h  server.cpp  server.h  webview.mk
src/libs/xbee/: Makefile  xbee.cpp  xbee.h
src/msgs/: AgentTask.proto  AttentionMessage.proto  BeaconSignal.proto  CMakeLists.txt  ExplorationInfo.proto  ExploreInstruction.proto  GameState.proto  Header.proto  MachineCommands.proto  MachineDescription.proto  MachineInfo.proto  MachineInstructions.proto  MachineReport.proto  MachineSpec.proto  Makefile  NavigationChallenge.proto  OrderInfo.proto  OrderInstruction.proto  Pose2D.proto  PuckInfo.proto  RobotCommands.proto  RobotInfo.proto  SimTimeSync.proto  StorageInfo.proto  Time.proto  VisionData.proto  WorkpieceInfo.proto
src/refbox/: CMakeLists.txt  Makefile  clips_logger.cpp  clips_logger.h  main.cpp  refbox.cpp  refbox.h  sps_comm.cpp  sps_comm.h
src/refbox/clips/: challenges.clp  config.clp  exploration.clp  facts.clp  game.clp  globals.clp  init.clp  machines.clp  mongodb.clp  net.clp  orders.clp  priorities.clp  production.clp  protobuf.clp  refbox.clp  robots.clp  setup.clp  simulation.clp  sync.clp  time.clp  utils.clp
src/tools/: CMakeLists.txt  Makefile  llsf-fake-robot.cpp  llsf-puck.cpp  llsf-report-machine.cpp  llsf-show-peers.cpp  llsf-signal-ctrl.cpp  llsf-sync-print.cpp  llsf-view2.cpp  llsf-view2.h  llsf-xbee.cpp  rcll-agent-task-client.cpp  rcll-machine-add-base.cpp  rcll-modbus-mockup.cpp  rcll-mps-relay.cpp  rcll-prepare-machine.cpp  rcll-proto-rebroadcaster.cpp  rcll-refbox-instruct.cpp  rcll-reset-machine.cpp  rcll-set-machine-lights.cpp  rcll-set-machine-state.cpp  rcll-simulate-mps.cpp  rcll-workpiece.cpp
src/tools/modbus/: BaseStation.cpp  BaseStation.h  CapStation.cpp  CapStation.h  DeliveryStation.cpp  DeliveryStation.h  MPSIoMapping.h  Machine.cpp  Machine.h  RingStation.cpp  RingStation.h  StorageStation.cpp  StorageStation.h  timeUtils.cpp  timeUtils.h  timeoutException.h
(+436 files in other folders)
